# SmartHomeBioSignal

./: .gitignore  config.yaml
.devcontainer/: devcontainer.json
dash-app/: README.md  pyproject.toml  requirements.txt
dash-app/dash_app/src/: app.py
dash-app/dash_app/src/assets/: adaboost_deploy_v1.joblib
dash-app/dash_app/src/assets/data/: history_hum.csv  history_temp.csv
dash-app/dash_app/src/assets/model/: adaboost_deploy_v2.joblib
dash-app/dash_app/src/data_processing/: PreprocessingUnit.py  ThermalControlUnit.py
dash-app/dash_app/src/layout/: layout.py
dash-app/dash_app/src/routes/: routes.py
dash-app/src/: app.py
dash-app/src/assets/: styles.css
dash-app/src/routes/: routes.py
