[project]
name = "dash-app"
version = "0.1.0"
description = "homeassistant app that receives data from a smart watch and displays it in a dashboard"
authors = [
    {name = "Felix",email = "felix.marschall@student.kit.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "dash (>=2.18.2,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "homeassistant-api==4.2.2.post2; python_version >= '3.12' and python_version < '4.0'",
    "dash-bootstrap-components>=1.0.0; python_version >= '3.12' and python_version < '4.0'",
    "dash-html-components (>=2.0.0,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run-dash-server = "dash_app.src.app:main"