[tool.poetry]
name = "dash-app"
version = "0.1.0"
description = "homeassistant app that receives data from a smart watch and displays it in a dashboard"
authors = ["Felix <felix@gmx.de>"]
readme = "README.md"
packages = [{include = "dash_app"}]  # Required if your code is inside a folder

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
pandas = ">=2.2.3,<3.0.0"
dash = ">=2.18.2,<3.0.0"
pyyaml = ">=6.0.2,<7.0.0"
homeassistant-api = "4.2.2.post2"
dash-bootstrap-components = ">=1.0.0"
dash-html-components = ">=2.0.0,<3.0.0"
joblib = ">=1.4.2,<2.0.0"
scikit-learn = ">=1.3.2,<2.0.0"

[tool.poetry.scripts]
run-dash-server = "dash_app.src.app:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
